@@ -1,5 +1,5 @@
 test.confirm=true
-									test.data.directory=C:/temp/irodsscratch/
+									test.data.directory=/Users/mikeconway/temp/irodsscratch/
 									test.irods.admin=rods
 									test.irods.admin.password=test
 									test.irods.user=test1
@@ -11,11 +11,11 @@ test.confirm=true
 									test3.irods.user=test3
 									test3.irods.password=test
 									test3.irods.resource=test1-resc2
-									test.irods.host=fedZone1
+									test.irods.host=localhost
 									test.irods.port=1247
-									test.irods.zone=fedZone1
+									test.irods.zone=test1
 									test.resource.group=testResourceGroup
 									test.irods.userDN=test1DN
 									test.irods.scratch.subdir=jargon-scratch
-									test.mac.icommand.path=${jargon.test.mac.icommand.path}
+									test.mac.icommand.path=/opt/iRODS/iRODS2.5/iRODS/clients/icommands/bin/
 									test.option.exercise.remoteexecstream=true
