@@ -38,6 +38,9 @@ Note that the following bug and feature requests are logged in GForge with relat
 
 *[#1575] fix missing space in jargon_specquery.sh for ilsLACollections
 
+*[#1618] performance issue with extra flushes in IRODSCommands
+**restructured the flush() commands in IRODSCommands to improve stream performance
+
 ==Features==
 
 
